<resources>
    <string name="RecurringCreated">Recurring Created</string>
    <string name="account_name">Account Name</string>
    <string name="account_prompt">Choose a Account</string>
    <string name="action_account">Manage Account</string>
    <string name="action_add">Add</string>
    <string name="action_analytics">Analytics</string>
    <string name="action_backup">Backup</string>
    <string name="action_camera">Camera</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_details">All Transaction</string>
    <string name="action_done">Done</string>
    <string name="action_finish">Finish</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_help">Help</string>
    <string name="action_more">More apps</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_pro">Pro Version</string>
    <string name="action_rate">Rate app</string>
    <string name="action_restore">Restore</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share app</string>
    <string name="action_support">Feedback</string>
    <string name="action_tour">Take a tour</string>
    <string name="action_whats_new">What\'s new</string>
    <string name="action_yes">Yes</string>
    <string name="add_edit_categories">Add and Edit Categories</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="add_new_account">Add New Account</string>
    <string name="additional_info">Additional Info</string>
    <string name="additional_note">Addition Notes</string>
    <string name="all">All</string>
    <string name="amount">Amount</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_id">UA-46701449-2</string>
    <string name="app_language">Language</string>
    <string name="app_language_text">Manage Application Language</string>
    <string name="app_name">Budget Manager</string>
    <string name="auto_repeat">Auto Repeat</string>
    <string name="back_msg">Press once again to exit</string>
    <string name="backup">Backup</string>
    <string name="balance">Balance</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="be_careful">Be Careful</string>
    <string name="be_careful_msg">Do you want to update all future recurring transaction?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_messages">Browse Messages</string>
    <string name="btn_add">Add</string>
    <string name="btn_cerate_account">Create a new Account</string>
    <string name="btn_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="change">Change</string>
    <string name="color">Color</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="confirm_pin">Confirm Your Pin</string>
    <string name="currency">Currency</string>
    <string name="custom">Custom</string>
    <string name="daily">Daily</string>
    <string name="date">Date</string>
    <string name="delete_all_future_recurring_transaction">Do you want to delete all future recurring transaction?</string>
    <string name="details">Details</string>
    <string name="dialog_enable_password">Do you want to enable password?</string>
    <string name="disable_password">Disable Password</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_frequent_transaction">Edit Your frequent Transaction</string>
    <string name="edit_income">Edit Income</string>
    <string name="edt_amount">Enter Amount</string>
    <string name="edt_category">Enter Category Name</string>
    <string name="edt_spent_limit">Enter Spent Limit</string>
    <string name="email_address">Email Address</string>
    <string name="email_note">Please enter your correct email address, App will use this as default email to reset password.</string>
    <string name="empty_chart">Your dataset is empty.\\nPlease enter some data to draw pie chart</string>
    <string name="enable_password">Enable Password</string>
    <string name="enable_pro_version">Enable Pro Version</string>
    <string name="end_date">End Date : %s</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_pin">Enter Your Pin</string>
    <string name="expense">Expense</string>
    <string name="expense_category">Expense Category</string>
    <string name="export">Export</string>
    <string name="facebook_app_id">501026073352929</string>
    <string name="fixed_expense">Fixed Expense</string>
    <string name="fixed_income">Fixed Income</string>
    <string name="forget_pin">Forgot Pin</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_category_color">Category Color :</string>
    <string name="image">image</string>
    <string name="import_data">Import data</string>
    <string name="income">Income</string>
    <string name="income_category">Income Category</string>
    <string name="it_will_help_us_future">It will help us in future</string>
    <string name="lets_compare_with_friends">Let\'s compare with friends</string>
    <string name="lets_njoy_some_new_apps">Let\'s enjoy with some new apps</string>
    <string name="mail_feedback_message">Hello this is message body!</string>
    <string name="mail_feedback_subject">Feedback</string>
    <string name="manage_account">Manage Accounts</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="method">Method</string>
    <string name="mi_content_description_back">Back</string>
    <string name="mi_content_description_next">Next</string>
    <string name="mi_content_description_next_finish">Next/Finish</string>
    <string name="mi_content_description_skip">Skip</string>
    <string name="mi_label_button_cta">Get started</string>
    <string name="monthly">Monthly</string>
    <string name="more_excting_apps">More Excting Apps</string>
    <string name="msg_are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="msg_backup_created_successfully">Backup created Successfully</string>
    <string name="msg_data_backup">Export your income/expense transactions in XML or Excel formats! Select any one of your choice.</string>
    <string name="msg_data_restore">Restore your income/expense transactions in XML or Excel formats! Select any one of your choice.</string>
    <string name="msg_data_restored">It will delete all the current data and update database with your last backup. Are you sure to restore?</string>
    <string name="msg_data_restored_successfully">Data restored Successfully</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_disable_password">Do you want to disable password?</string>
    <string name="msg_mail_using">Mail using..</string>
    <string name="msg_no_data_found">No Data Found</string>
    <string name="msg_please_enter_category_limit">Please Enter Category spent limit</string>
    <string name="msg_please_enter_category_name">Please Enter Category Name</string>
    <string name="msg_please_wait">Please Wait..</string>
    <string name="msg_select_color">Select Color</string>
    <string name="msg_select_currency">Select Currency</string>
    <string name="msg_share_with">Share with..</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name">Name</string>
    <string name="nav_header_desc">Current User Image</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="need_support">Need Support</string>
    <string name="new_account">New Account</string>
    <string name="no_backup">No previous backup found. Please create it first</string>
    <string name="no_spent_limit">No spent limit available</string>
    <string name="no_transaction">No transaction available</string>
    <string name="note">Note</string>
    <string name="over_spent">Over Spent</string>
    <string name="over_spent_msg">Expense over spent limit. Please increase category limit</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="receipts">Receipts</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="recurring">Recurring</string>
    <string name="recurring_canceled">Recurring Canceled</string>
    <string name="recurring_date">Recurring Date</string>
    <string name="recurring_delete">Recurring Deleted</string>
    <string name="recurring_note">Indicates Pending Recurring Transactions</string>
    <string name="recurring_set">Recurring Set</string>
    <string name="recurring_transaction">Recurring Transactions</string>
    <string name="recurring_type">Recurring Type</string>
    <string name="remove_ads">remove ads</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="save_current_data">Save current data</string>
    <string name="search_menu_title">Search</string>
    <string name="see_exmaple">See Example</string>
    <string name="select_account">Select Account</string>
    <string name="select_category">Select Category</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_income_expense">Select Income Expense</string>
    <string name="select_language">Select Language</string>
    <string name="select_method">Select Method</string>
    <string name="select_picture">Select Picture</string>
    <string name="set_password_msg">Do you want to set password?</string>
    <string name="setting_account">Accounts</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_quick_text">Display at Main Screen</string>
    <string name="setting_quick_view">Quick View</string>
    <string name="setting_security">Security</string>
    <string name="settings">Settings</string>
    <string name="share_hint">Share other device</string>
    <string name="share_this_app">Share This App</string>
    <string name="spending">Spending</string>
    <string name="spending_limit">Spending Limit</string>
    <string name="spent_limit">Spent Limit :</string>
    <string name="start_date">Start Date : %s</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tamplete_hint">e.g. &lt;rs:000&gt; w/d@SBI &lt;note:ATM S1NG000000 fm A/cx0000 on 20Feb19Txn#0000&gt; &lt;etc:Avl bal Rs0000&gt; If not w/d by u,frwd This SMS to 0000000000 or call 180000000 to block ur card</string>
    <string name="tamplete_note">Note : Kindly replace tracking amount to &lt;rs:000&gt;, tracking note to &lt;note:enter note&gt; and any other variable to &lt;etc:enter etc&gt;</string>
    <string name="title_send_feedback">Choose a Feedback</string>
    <string name="total">Total</string>
    <string name="tv0">0</string>
    <string name="tv1">1</string>
    <string name="tv2">2</string>
    <string name="your_tamplete">SMS Template</string>
</resources>