<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_menu_account"
            android:orderInCategory="100"
            android:title="@string/action_account" />
        <item
            android:id="@+id/action_details"
            android:icon="@drawable/ic_menu_transaction"
            android:orderInCategory="100"
            android:title="@string/action_details" />
        <item
            android:id="@+id/action_analytics"
            android:icon="@drawable/ic_menu_analytics"
            android:orderInCategory="100"
            android:title="@string/action_analytics" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_menu_setting"
            android:orderInCategory="100"
            android:title="@string/action_settings" />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/action_backup"
            android:icon="@drawable/ic_menu_backup"
            android:orderInCategory="100"
            android:title="@string/action_backup"
            android:visible="false" />
        <item
            android:id="@+id/action_restore"
            android:icon="@drawable/ic_menu_restore"
            android:orderInCategory="100"
            android:title="@string/action_restore"

            android:visible="false" />
    </group>
    <group>

        <item
            android:id="@+id/action_whats_new"
            android:orderInCategory="100"
            android:title="@string/action_whats_new"
            android:visible="false" />
        <item
            android:id="@+id/action_tour"
            android:icon="@drawable/ic_menu_support"
            android:orderInCategory="100"
            android:title="@string/action_tour" />

    </group>
</menu>
