<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="4"
                android:visibility="visible">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_account"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_account"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_account" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_currency"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:id="@+id/tvSummeryCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="INR" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="5">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_quickview"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_quick_view"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_quick_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="2">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_category"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:id="@+id/tvSummeryCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_categories" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="3"
                android:visibility="gone">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/language"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_language"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:id="@+id/tvSummeryLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_language_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:orientation="horizontal"
                android:tag="3">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_notification"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_notification"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manage_notifications" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.08"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:tag="4"
                android:visibility="visible">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_unlock"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_security"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_password" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switch_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.08"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="6">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_share"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_share"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_hint" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_bg"
                android:clickable="true"
                android:onClick="onSelectItem"
                android:orientation="horizontal"
                android:tag="7">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu_rate"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_rate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_this_app" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bannerAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:padding="10dp" />
    </LinearLayout>
</ScrollView>
